# zkml-inference-sp1

./: .gitignore  Cargo.toml  README.md
classifier/: Cargo.toml
classifier-io/: Cargo.toml
classifier-io/src/: input.rs  ipfs.rs  lib.rs
classifier/src/: lib.rs  mlp.rs  mlp2.rs  nn.rs
classifier/weights/mlp2/: fc1_bias.npy  fc1_weight.npy  fc2_bias.npy  fc2_weight.npy  fc3_bias.npy  fc3_weight.npy
notebooks/: example-input.npy  export_weights_mlp2.ipynb  inspect_prepared_input.ipynb
program/: Cargo.toml
program-tests/: Cargo.toml
program-tests/tests/: fashion-mnist.rs  inspect-input.rs
program/src/: main.rs
script/: Cargo.toml
