[package]
version = "0.1.0"
name = "classifier-script"
edition = "2021"
default-run = "classifier"

[[bin]]
name = "classifier"
path = "src/bin/main.rs"

[dependencies]
alloy-sol-types.workspace = true
clap = { version = "4.0", features = ["derive", "env"] }
classifier-io.workspace = true
classifier.workspace = true
hex = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-sdk = "1.1.0"
tracing = "0.1"

[build-dependencies]
sp1-helper = "1.1.0"
